# telemetry-monitoring-tool

./: README.md  anomalies.csv  anomaly.csv  config.example.json  config.json  config.legacy.json  config.udp.json  config_simple.json  force_anomaly.py  pyproject.toml  requirements.txt  run_gui.py  test.csv  udp_gen.py
improvements/: advanced_forecasting.py  async_processor.py  memory_management.py  state_persistence.py
scripts/: smoke.py
src/alerts/: __init__.py  alert_config.py  alert_manager.py  email_alerter.py
src/gui/: config.py  config_fixed.py  config_old.py  main.py  service.py
src/gui/widgets/: alert_config.py  anomalies.py  detection_results.py  detector_control.py  forecasts.py  plots.py
src/ingest/: sources.py
src/telemetry/: __init__.py  anomaly.py  detector_base.py  forecast.py  iqr_detector.py  isolation_forest_detector.py  model.py  modified_zscore_detector.py  simulator.py  stream_app.py
src/telemetry_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_anomaly.py  test_forecast.py
