[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry-tool"
version = "0.1.0"
description = "Satellite telemetry monitoring: streaming anomaly detection and forecasting"
authors = [{name = "You"}]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "statsmodels>=0.14",
    "typer>=0.12",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
